# baby_safety_zone

./: README.md  main.cpp  yolov3-tiny_training.cfg
App/: README.md
App/app/: google-services.json
App/app/src/androidTest/java/com/example/babysafetyzone/: ExampleInstrumentedTest.kt
App/app/src/main/java/com/example/babysafetyzone/: MainActivity.kt  MyFirebaseMessagingService.kt
App/app/src/main/res/layout/: activity_main.xml  notification.xml
App/app/src/main/res/values/: strings.xml
BabySafetyZone/: settings.gradle
BabySafetyZone/app/: build.gradle
BabySafetyZone/app/src/main/: AndroidManifest.xml
BabySafetyZone/app/src/main/res/values/: themes.xml
BabySafetyZone/app/src/main/res/values-night/: themes.xml
BabySafetyZone/app/src/test/java/com/example/babysafetyzone/: ExampleUnitTest.kt
BabySafetyZone/gradle/wrapper/: gradle-wrapper.properties
C++/: CMakeLists.txt  README.md
web/: app.js  package-lock.json
